// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManagedRuleEditor/> auto-reply-faq-questions editor should render correctly 1`] = `
<div>
  <div
    class="container autoReplyFAQ"
  >
    <div
      class="descriptionWrapper"
    >
      <h3>
        Rule description
      </h3>
      <p>
        Automatically reply to common shopper questions with relevant help center article suggestions.
      </p>
      <p>
        Link
      </p>
      <div
        class="listWrapper"
      >
        <h4>
          Exclusion email list
        </h4>
        <p>
          Emails in the following list will never be replied to by this auto reply rule.
        </p>
        <div
          class="MultiSelectField blockList"
        >
          <div
            class="container"
          >
            <div
              class="inputContainer multiSelectOptionField-dropdown"
            >
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <input
                    class="input"
                    placeholder="Add items..."
                    value=""
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="options dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <h6
                    class="dropdown-header"
                    tabindex="-1"
                  >
                    No result
                  </h6>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Message above article preview
        </h4>
        <div
          class="field"
        >
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="public-DraftEditorPlaceholder-root"
                  >
                    <div
                      class="public-DraftEditorPlaceholder-inner"
                      id="placeholder-123"
                      style="white-space: pre-wrap;"
                    >
                      Type {{ for variables }}
                    </div>
                  </div>
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-123"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span
                              data-offset-key="123-0-0"
                            >
                              <br
                                data-text="true"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
          <div
            class="textarea-toolbar"
          >
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Ticket customer
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
              </div>
            </div>
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Current agent
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Bio
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Message below article preview
        </h4>
        <div
          class="field"
        >
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="public-DraftEditorPlaceholder-root"
                  >
                    <div
                      class="public-DraftEditorPlaceholder-inner"
                      id="placeholder-123"
                      style="white-space: pre-wrap;"
                    >
                      Type {{ for variables }}
                    </div>
                  </div>
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-123"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span
                              data-offset-key="123-0-0"
                            >
                              <br
                                data-text="true"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
          <div
            class="textarea-toolbar"
          >
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Ticket customer
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
              </div>
            </div>
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Current agent
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Bio
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="demo"
    >
      <div
        class="topbar"
      >
        <div
          class="circle"
        />
        <div
          class="circle"
        />
        <div
          class="circle"
        />
      </div>
      <div
        class="demoContent"
      >
        <div
          class="textdata"
        >
          <div>
            <div
              class="previewLegend"
            >
              Message above article preview
            </div>
            <div
              class="previewBodyWrapper"
            >
              <div
                class="rich-textarea-wrapper display-only"
              >
                <div
                  class="editor-wrapper"
                >
                  <div
                    class="withMinHeight"
                  >
                    <div
                      class="DraftEditor-root"
                    >
                      <div
                        class="DraftEditor-editorContainer"
                      >
                        <div
                          aria-describedby="placeholder-123"
                          class="public-DraftEditor-content"
                          contenteditable="false"
                          spellcheck="false"
                          style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                        >
                          <div
                            data-contents="true"
                          >
                            <div
                              class=""
                              data-block="true"
                              data-editor="123"
                              data-offset-key="123-0-0"
                            >
                              <div
                                class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-offset-key="123-0-0"
                                >
                                  <br
                                    data-text="true"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="editor-toolbar page"
                >
                  <div
                    class="actionsWrapper"
                  >
                    <div
                      class="actions"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_bold"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_italic"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_underline"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_underline
                        </i>
                      </button>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_link"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            link
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_photo"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_photo
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_emoticon"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_emoticon
                          </i>
                        </button>
                        <div
                          class="p-0 d-flex popover top-left hidden"
                        />
                      </span>
                    </div>
                    <div
                      class="hoverOverlay"
                    >
                      Add files as attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="container FAQArticle"
          >
            <div
              class="articleTitle"
            >
              What size should I order
            </div>
            <div
              class="articleDescription"
            >
              <p>
                Unsure what size will work? Check out our sizing guide located above the sizes offered on each product page for exact measure...
              </p>
              <p
                class="articleLink"
              >
                Read more
              </p>
            </div>
          </div>
          <div>
            <div
              class="previewLegend"
            >
              Message below article preview
            </div>
            <div
              class="previewBodyWrapper"
            >
              <div
                class="rich-textarea-wrapper display-only"
              >
                <div
                  class="editor-wrapper"
                >
                  <div
                    class="withMinHeight"
                  >
                    <div
                      class="DraftEditor-root"
                    >
                      <div
                        class="DraftEditor-editorContainer"
                      >
                        <div
                          aria-describedby="placeholder-123"
                          class="public-DraftEditor-content"
                          contenteditable="false"
                          spellcheck="false"
                          style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                        >
                          <div
                            data-contents="true"
                          >
                            <div
                              class=""
                              data-block="true"
                              data-editor="123"
                              data-offset-key="123-0-0"
                            >
                              <div
                                class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-offset-key="123-0-0"
                                >
                                  <br
                                    data-text="true"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="editor-toolbar page"
                >
                  <div
                    class="actionsWrapper"
                  >
                    <div
                      class="actions"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_bold"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_italic"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_underline"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_underline
                        </i>
                      </button>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_link"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            link
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_photo"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_photo
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_emoticon"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_emoticon
                          </i>
                        </button>
                        <div
                          class="p-0 d-flex popover top-left hidden"
                        />
                      </span>
                    </div>
                    <div
                      class="hoverOverlay"
                    >
                      Add files as attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="toggleButtonContainer"
  >
    <span>
      <div>
        <label
          aria-checked="true"
          class="label label"
          for="toggle-button-3"
          role="switch"
        >
          <input
            checked=""
            class="input"
            disabled=""
            id="toggle-button-3"
            name="toggle-button-3"
            type="checkbox"
          />
          <div
            class="slider"
          />
        </label>
      </div>
    </span>
    <span>
      <label
        class="toggleLabel mr-2"
      >
        Enable rule
      </label>
    </span>
  </div>
  <div
    class="buttons-container"
  >
    <div>
      <button
        class="wrapper fill primary medium isDisabled"
        disabled=""
        form="rule-form"
        id="rule-item-save"
        type="button"
      >
        Update rule
      </button>
    </div>
    <div>
      <button
        class="wrapper fill destructive medium"
        id="rule-item-delete"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            delete
          </i>
          Delete rule
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<ManagedRuleEditor/> auto-reply-wismo editor should render correctly 1`] = `
<div>
  <div
    class="alert warning mb-3"
  >
    <div
      class="iconContainer"
    >
      <img
        alt="icon"
        src="test-file-stub"
      />
    </div>
    <div
      class="content"
    >
      <span
        class="label"
      >
        This rule requires at least one Shopify integration to run.
      </span>
    </div>
  </div>
  <div
    class="container autoReplyWismo"
  >
    <div
      class="descriptionWrapper"
    >
      <h3>
        Rule description
      </h3>
      <p>
        Automatically respond to the common
         
        <em>
          "Where is my order?"
        </em>
         email with tracking links for the shopper's last 3 orders.
      </p>
      <p>
        Link
      </p>
      <div
        class="listWrapper"
      >
        <h4>
          Exclusion email list
        </h4>
        <p>
          Emails in the following list will never be replied to by this auto reply rule.
        </p>
        <div
          class="MultiSelectField blockList"
        >
          <div
            class="container"
          >
            <div
              class="inputContainer multiSelectOptionField-dropdown"
            >
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <input
                    class="input"
                    placeholder="Add items..."
                    value=""
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="options dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <h6
                    class="dropdown-header"
                    tabindex="-1"
                  >
                    No result
                  </h6>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Message body
        </h4>
        <div
          class="field"
        >
          <div
            class="textarea-toolbar"
          >
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Ticket customer
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
              </div>
            </div>
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Current agent
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Bio
                </button>
              </div>
            </div>
          </div>
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="public-DraftEditorPlaceholder-root"
                  >
                    <div
                      class="public-DraftEditorPlaceholder-inner"
                      id="placeholder-123"
                      style="white-space: pre-wrap;"
                    >
                      Type {{ for variables }}
                    </div>
                  </div>
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-123"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span
                              data-offset-key="123-0-0"
                            >
                              <br
                                data-text="true"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper trackingBlock"
      >
        <div
          class="title"
        >
          <div>
            <img
              alt="shopify logo"
              class="shopifyIcon"
              src="test-file-stub"
            />
          </div>
          <div>
            Tracking number information
          </div>
        </div>
        <div>
          Order tracking link and information will be added here
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Signature
        </h4>
        <div
          class="field"
        >
          <div
            class="textarea-toolbar"
          >
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Ticket customer
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
              </div>
            </div>
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Current agent
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Bio
                </button>
              </div>
            </div>
          </div>
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="public-DraftEditorPlaceholder-root"
                  >
                    <div
                      class="public-DraftEditorPlaceholder-inner"
                      id="placeholder-123"
                      style="white-space: pre-wrap;"
                    >
                      Type {{ for variables }}
                    </div>
                  </div>
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-123"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span
                              data-offset-key="123-0-0"
                            >
                              <br
                                data-text="true"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="demo"
    >
      <div
        class="topbar"
      >
        <div
          class="circle"
        />
        <div
          class="circle"
        />
        <div
          class="circle"
        />
      </div>
      <div
        class="demoContent"
      >
        <div
          class="textdata"
        >
          <div>
            <div
              class="previewLegend"
            >
              Message body
            </div>
            <div
              class="previewBodyWrapper"
            >
              <div
                class="rich-textarea-wrapper display-only"
              >
                <div
                  class="editor-wrapper"
                >
                  <div
                    class="withMinHeight"
                  >
                    <div
                      class="DraftEditor-root"
                    >
                      <div
                        class="DraftEditor-editorContainer"
                      >
                        <div
                          aria-describedby="placeholder-123"
                          class="public-DraftEditor-content"
                          contenteditable="false"
                          spellcheck="false"
                          style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                        >
                          <div
                            data-contents="true"
                          >
                            <div
                              class=""
                              data-block="true"
                              data-editor="123"
                              data-offset-key="123-0-0"
                            >
                              <div
                                class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-offset-key="123-0-0"
                                >
                                  <br
                                    data-text="true"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="editor-toolbar page"
                >
                  <div
                    class="actionsWrapper"
                  >
                    <div
                      class="actions"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_bold"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_italic"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_underline"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_underline
                        </i>
                      </button>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_link"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            link
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_photo"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_photo
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_emoticon"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_emoticon
                          </i>
                        </button>
                        <div
                          class="p-0 d-flex popover top-left hidden"
                        />
                      </span>
                    </div>
                    <div
                      class="hoverOverlay"
                    >
                      Add files as attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="container orderTracking"
          >
            <div
              class="orderTitleContainer"
            >
              <div
                class="orderTitle"
              >
                Order number
              </div>
              <div
                class="orderPrice"
              >
                Price
              </div>
            </div>
            <div
              class="fulfillmentContainer"
            >
              <div
                class="product"
              >
                <div
                  class="productTitle"
                >
                  Product 1
                </div>
                <div
                  class="productPrice"
                >
                  Price x1
                </div>
              </div>
              <div
                class="product"
              >
                <div
                  class="productTitle"
                >
                  Product 2
                </div>
                <div
                  class="productPrice"
                >
                  Price x2
                </div>
              </div>
              <div
                class="trackingLink"
              >
                loremipsum.com/tracking-1234
              </div>
            </div>
            <div
              class="fulfillmentContainer"
            >
              <div
                class="product"
              >
                <div
                  class="productTitle"
                >
                  Product 3
                </div>
                <div
                  class="productPrice"
                >
                  Price x1
                </div>
              </div>
              <div
                class="trackingLink"
              >
                loremipsum.com/tracking-4321
              </div>
            </div>
          </div>
          <div>
            <div
              class="previewLegend"
            >
              Signature
            </div>
            <div
              class="previewBodyWrapper"
            >
              <div
                class="rich-textarea-wrapper display-only"
              >
                <div
                  class="editor-wrapper"
                >
                  <div
                    class="withMinHeight"
                  >
                    <div
                      class="DraftEditor-root"
                    >
                      <div
                        class="DraftEditor-editorContainer"
                      >
                        <div
                          aria-describedby="placeholder-123"
                          class="public-DraftEditor-content"
                          contenteditable="false"
                          spellcheck="false"
                          style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                        >
                          <div
                            data-contents="true"
                          >
                            <div
                              class=""
                              data-block="true"
                              data-editor="123"
                              data-offset-key="123-0-0"
                            >
                              <div
                                class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-offset-key="123-0-0"
                                >
                                  <br
                                    data-text="true"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="editor-toolbar page"
                >
                  <div
                    class="actionsWrapper"
                  >
                    <div
                      class="actions"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_bold"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_italic"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_underline"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_underline
                        </i>
                      </button>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_link"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            link
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_photo"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_photo
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_emoticon"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_emoticon
                          </i>
                        </button>
                        <div
                          class="p-0 d-flex popover top-left hidden"
                        />
                      </span>
                    </div>
                    <div
                      class="hoverOverlay"
                    >
                      Add files as attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="toggleButtonContainer"
  >
    <span>
      <div>
        <label
          aria-checked="true"
          class="label label"
          for="toggle-button-2"
          role="switch"
        >
          <input
            checked=""
            class="input"
            disabled=""
            id="toggle-button-2"
            name="toggle-button-2"
            type="checkbox"
          />
          <div
            class="slider"
          />
        </label>
      </div>
    </span>
    <span>
      <label
        class="toggleLabel mr-2"
      >
        Enable rule
      </label>
    </span>
  </div>
  <div
    class="buttons-container"
  >
    <div>
      <button
        class="wrapper fill primary medium isDisabled"
        disabled=""
        form="rule-form"
        id="rule-item-save"
        type="button"
      >
        Update rule
      </button>
    </div>
    <div>
      <button
        class="wrapper fill destructive medium"
        id="rule-item-delete"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            delete
          </i>
          Delete rule
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<ManagedRuleEditor/> non-support-related-emails editor should render correctly 1`] = `
<div>
  <div
    class="container"
  >
    <h3>
      Rule description
    </h3>
    <p>
      This rules leverages machine learning to auto-close tickets unrelated to a customer support request.
    </p>
    <p>
      For best results, make sure that this rule is triggering before all other rules by putting it at the top of your rule list.
    </p>
    <p>
      Link
    </p>
    <div
      class="listWrapper"
    >
      <h4>
        Accept list
      </h4>
      <p>
        Emails in the following list will never be closed by this auto close rule.
      </p>
      <div
        class="MultiSelectField allowList"
      >
        <div
          class="container"
        >
          <div
            class="inputContainer multiSelectOptionField-dropdown"
          >
            <div
              class="dropdown"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class=""
                data-toggle="dropdown"
              >
                <input
                  class="input"
                  placeholder="Add items..."
                  value=""
                />
              </div>
              <div
                aria-hidden="true"
                class="options dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <h6
                  class="dropdown-header"
                  tabindex="-1"
                >
                  No result
                </h6>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="listWrapper"
    >
      <h4>
        Block list
      </h4>
      <p>
        Emails in the following list will always be closed by this auto close rule.
      </p>
      <div
        class="MultiSelectField blockList"
      >
        <div
          class="container"
        >
          <div
            class="inputContainer multiSelectOptionField-dropdown"
          >
            <div
              class="dropdown"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class=""
                data-toggle="dropdown"
              >
                <input
                  class="input"
                  placeholder="Add items..."
                  value=""
                />
              </div>
              <div
                aria-hidden="true"
                class="options dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <h6
                  class="dropdown-header"
                  tabindex="-1"
                >
                  No result
                </h6>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="toggleButtonContainer"
  >
    <span>
      <div>
        <label
          aria-checked="true"
          class="label label"
          for="toggle-button-1"
          role="switch"
        >
          <input
            checked=""
            class="input"
            disabled=""
            id="toggle-button-1"
            name="toggle-button-1"
            type="checkbox"
          />
          <div
            class="slider"
          />
        </label>
      </div>
    </span>
    <span>
      <label
        class="toggleLabel mr-2"
      >
        Enable rule
      </label>
    </span>
  </div>
  <div
    class="buttons-container"
  >
    <div>
      <button
        class="wrapper fill primary medium isDisabled"
        disabled=""
        form="rule-form"
        id="rule-item-save"
        type="button"
      >
        Update rule
      </button>
    </div>
    <div>
      <button
        class="wrapper fill destructive medium"
        id="rule-item-delete"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            delete
          </i>
          Delete rule
        </span>
      </button>
    </div>
  </div>
</div>
`;
